add db integrationa and dockerized

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 PROJECT_ROOT="your-path/evision-prediction-python"
+DB_URL="postgresql://abc:abc@0.0.0.0:5432/abc"
+DB_USER="abc"
+DB_PASS="abc"
+DB_LINK="0.0.0.0:5432"
+DB_NAME="abc"
